# sclab

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/pseudotime_scaling_20260219/: index.md
conductor/tracks/pseudotime_scaling_20260219/: metadata.json  plan.md  spec.md
docs/: index.md
docs/api/: dashboard.md  methods.md  preprocess.md  tools.md
docs/developer-guide/: custom-steps.md  event-system.md
docs/getting-started/: installation.md  quickstart.md  r-setup.md
docs/tutorials/: index.md
docs/user-guide/: batch-integration.md  dashboard.md  differential-expression.md  doublet-detection.md  exploring-results.md  pseudotime.md  standard-workflow.md
src/sc_labbench/components/event/: __init__.py  _client.py
src/sclab/: __init__.py  _io.py  _methods_registry.py  _sclab.py
src/sclab/dataset/: __init__.py  _dataset.py  _exceptions.py
src/sclab/dataset/plotter/: __init__.py  _controls.py  _plotter.py  _utils.py
src/sclab/dataset/processor/: __init__.py  _processor.py  _results_panel.py
src/sclab/dataset/processor/step/: __init__.py  _basic_processor_step.py  _processor_step_base.py
src/sclab/event/: _broker.py  _client.py  _utils.py
src/sclab/examples/: __init__.py
src/sclab/examples/processor_steps/: __init__.py  _cluster.py  _differential_expression.py  _doublet_detection.py  _gene_expression.py  _integration.py  _neighbors.py  _pca.py  _preprocess.py  _qc.py  _umap.py
src/sclab/gui/: __init__.py
src/sclab/gui/components/: __init__.py  _guided_pseudotime.py  _transfer_metadata.py
src/sclab/methods/: __init__.py
src/sclab/preprocess/: __init__.py  _cca.py  _cca_integrate.py  _filter_obs.py  _harmony.py  _harmony_integrate.py  _mcca.py  _mcca2.py  _normalize_weighted.py  _pca.py  _preprocess.py  _qc.py  _rpca.py  _subset.py  _transfer_metadata.py  _transform.py  _utils.py
src/sclab/scanpy/: logging.py  readwrite.py
src/sclab/tools/cellflow/: __init__.py  _density_dynamics.py  _expression_dynamics.py
src/sclab/tools/cellflow/_pseudotime/: _pseudotime.py
src/sclab/tools/cellflow/density_dynamics/: _density_dynamics.py
src/sclab/tools/cellflow/expression_dynamics/: _expression_dynamics.py
src/sclab/tools/cellflow/pseudotime/: _pseudotime.py  timeseries.py
src/sclab/tools/cellflow/pseudotime_tools/: __init__.py
src/sclab/tools/cellflow/utils/: density_nd.py  interpolate.py  periodic_genes.py  smoothen.py  times.py
src/sclab/tools/differential_expression/: __init__.py  _pseudobulk_edger.py  _pseudobulk_helpers.py  _pseudobulk_limma.py
src/sclab/tools/doublet_detection/: __init__.py  _doubletdetection.py  _scdblfinder.py  _scrublet.py
src/sclab/tools/imputation/: _alra.py
src/sclab/tools/labeling/: __init__.py  sctype.py
src/sclab/tools/utils/: __init__.py  _aggregate_and_filter.py
src/sclab/utils/: __init__.py  _write_excel.py
tests/sc_labbench/components/event/: test_event_broker.py  test_event_client.py
tests/sc_labbench/event/: test_event_broker.py  test_event_client.py
tests/sclab/: test_dashboard_methods_run.py  test_imports.py
tests/sclab/dataset/: test_imports.py
tests/sclab/event/: test_event_broker.py  test_event_client.py  test_imports.py
tests/sclab/gui/: test_imports.py
tests/sclab/methods/: test_imports.py
tests/sclab/preprocess/: test_imports.py  test_normalized_weighted.py  test_preprocess.py  test_qc.py  test_subset.py  test_transform.py  test_utils.py
tests/sclab/test_utils/: __init__.py  _simple_loop_adata.py
tests/sclab/tools/cellflow/: test_imports.py
tests/sclab/tools/cellflow/pseudotime/: test_pseudotime.py  test_rescaling.py  test_timeseries.py
tests/sclab/tools/cellflow/utils/: test_interpolate_ndbspline.py
