[project]
name = "sclab"
version = "0.1.1"
description = "sclab"
readme = "README.md"
authors = [
    { name = "Argenis Arriojas", email = "ArriojasMaldonado001@umb.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.3",
    "ipywidgets>=8.1.5",
    "itables>=2.2.4",
    "numpy<2.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scanpy>=1.10.4",
    "scikit-learn>=1.6.1",
    "svgpathtools>=1.6.1",
]

[project.urls]
"Repository" = "https://github.com/umbibio/sclab.git"
"Documentation" = "https://github.com/umbibio/sclab/docs"
"Homepage" = "https://github.com/umbibio/sclab"
"Bug Tracker" = "https://github.com/umbibio/sclab/issues"
"Changelog" = "https://github.com/umbibio/sclab/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=8.3.4"]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "sclab"
source = "src/sclab"

[dependency-groups]
dev = [
    "bump-my-version>=0.31.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "nox>=2024.1.29",
    "pytest>=8.3.4",
]
