[project]
name = "sclab"
version = "0.1.8"
description = "sclab"
readme = "README.md"
authors = [
    { name = "Argenis Arriojas", email = "ArriojasMaldonado001@umb.edu" },
]
requires-python = ">=3.10,<3.13"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anndata",
    "anywidget",
    "ipywidgets",
    "itables",
    "numpy<2.2",
    "pandas",
    "plotly<6.0",
    "scanpy",
    "scikit-learn",
    "scikit-misc",
    "svgpathtools",
]

[project.urls]
"Repository" = "https://github.com/umbibio/sclab.git"
"Documentation" = "https://github.com/umbibio/sclab/docs"
"Homepage" = "https://github.com/umbibio/sclab"
"Bug Tracker" = "https://github.com/umbibio/sclab/issues"
"Changelog" = "https://github.com/umbibio/sclab/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=8.3.4"]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "sclab"
source = "src/sclab"

[dependency-groups]
dev = [
    "bump-my-version>=0.31.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "nox>=2024.1.29",
    "pytest>=8.3.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.3",
    "mkdocs-jupyter>=0.25.1",
]
